kubernetes/k8s-base-layer-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoices-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoices
  template:
    metadata:
      labels:
        app: invoices
    spec:
      containers:
        - name: invoices-contenedor
          image: us-central1-docker.pkg.dev/experimentos-435400/uniandes-misw-proyecto-grado-19/invoices:1.0
          ports:
            - containerPort: 3002

---
#Service

apiVersion: v1
kind: Service
metadata:
  name: invoices-service
  annotations:
    cloud.google.com/backend-config: '{"default": "invoices-config"}'
spec:
  selector:
    app: invoices
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
      nodePort: 32335
  type: NodePort

# Deploy payments

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments-contenedor
          image: us-central1-docker.pkg.dev/experimentos-435400/uniandes-misw-proyecto-grado-19/payments:1.0
          ports:
            - containerPort: 3001

---
# healthcheck

apiVersion: cloud.google.com/v1
kind: BackendConfig
metadata:
  name: payments-config
spec:
  healthCheck:
    checkIntervalSec: 60
    port: 3001
    type: HTTP
    requestPath: /payment/ping

apiVersion: v1
kind: Service
metadata:
  name: payments-service
  annotations:
    cloud.google.com/backend-config: '{"default": "payments-config"}'
spec:
  selector:
    app: payments
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      nodePort: 32336
  type: NodePort
