kubernetes/k8s-base-layer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users-contenedor
          image: us-central1-docker.pkg.dev/experimentos-435400/uniandes-misw-proyecto-grado-19/users:39
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  annotations:
    cloud.google.com/backend-config: '{"default": "users-config"}'
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 32337
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incidents-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incidents
  template:
    metadata:
      labels:
        app: incidents
    spec:
      serviceAccountName: k8s-proyecto-final-serviceaccount
      containers:
        - name: incidents-contenedor
          image: us-central1-docker.pkg.dev/experimentos-435400/uniandes-misw-proyecto-grado-19/incidents:39
          ports:
            - containerPort: 3004

---
apiVersion: v1
kind: Service
metadata:
  name: incidents-service
  annotations:
    cloud.google.com/backend-config: '{"default": "incidents-config"}'
spec:
  selector:
    app: incidents
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3004
      nodePort: 32338
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plans-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plans
  template:
    metadata:
      labels:
        app: plans
    spec:
      serviceAccountName: k8s-proyecto-final-serviceaccount
      containers:
        - name: plans-contenedor
          image: us-central1-docker.pkg.dev/experimentos-435400/uniandes-misw-proyecto-grado-19/plans:39
          ports:
            - containerPort: 3003

---
apiVersion: v1
kind: Service
metadata:
  name: plans-service
  annotations:
    cloud.google.com/backend-config: '{"default": "plans-config"}'
spec:
  selector:
    app: plans
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
      nodePort: 32339
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice
  template:
    metadata:
      labels:
        app: invoice
    spec:
      serviceAccountName: k8s-proyecto-final-serviceaccount
      containers:
        - name: invoice-contenedor
          image: us-central1-docker.pkg.dev/experimentos-435400/uniandes-misw-proyecto-grado-19/invoice:39
          ports:
            - containerPort: 3002

---
apiVersion: v1
kind: Service
metadata:
  name: invoice-service
  annotations:
    cloud.google.com/backend-config: '{"default": "invoice-config"}'
spec:
  selector:
    app: invoice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
      nodePort: 32340
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      serviceAccountName: k8s-proyecto-final-serviceaccount
      containers:
        - name: payment-contenedor
          image: us-central1-docker.pkg.dev/experimentos-435400/uniandes-misw-proyecto-grado-19/payment:39
          ports:
            - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  annotations:
    cloud.google.com/backend-config: '{"default": "payment-config"}'
spec:
  selector:
    app: payment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      nodePort: 32341
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ia-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ia
  template:
    metadata:
      labels:
        app: ia
    spec:
      serviceAccountName: k8s-proyecto-final-serviceaccount
      containers:
        - name: ia-contenedor
          image: us-central1-docker.pkg.dev/experimentos-435400/uniandes-misw-proyecto-grado-19/ia:39
          ports:
            - containerPort: 3005

---
apiVersion: v1
kind: Service
metadata:
  name: ia-service
  annotations:
    cloud.google.com/backend-config: '{"default": "ia-config"}'
spec:
  selector:
    app: ia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3005
      nodePort: 32342
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reports-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reports
  template:
    metadata:
      labels:
        app: reports
    spec:
      serviceAccountName: k8s-proyecto-final-serviceaccount
      containers:
        - name: reports-contenedor
          image: us-central1-docker.pkg.dev/experimentos-435400/uniandes-misw-proyecto-grado-19/reports:39
          ports:
            - containerPort: 3006

---
apiVersion: v1
kind: Service
metadata:
  name: reports-service
  annotations:
    cloud.google.com/backend-config: '{"default": "reports-config"}'
spec:
  selector:
    app: reports
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3006
      nodePort: 32343
  type: NodePort
