kubernetes/k8s-ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /user
            backend:
              service:
                name: users-service 
                port:
                  number: 80
          - pathType: Prefix
            path: /incident
            backend:
              service:
                name: incidents-service 
                port:
                  number: 80
